--- a/fall/cross-country/example.qmd
+++ b/fall/cross-country/example.qmd
@@ -55,6 +55,6 @@ ggplot(top_champions, aes(x = reorder(team, -championships_won), y = championshi
 
 ### Notes/Caveats/Problems
 
-I did not have any issues with the status of teams depending on if they were a champion or finalist. I was able to make a bar chart to show that Hereford has the most championships in cross country, racking up 27 titles and 12 more than any other school. I was able to find similar data for teams that were finalists, but not champions.
+I did not have any issues with the status of teams depending on if they were a champion or finalist. I was able to make a bar chart to show that Hereford has the most championships in cross country, racking up 27 titles and 12 more than any other school. I was able to find similar data for teams that were finalists.
 
 The only problem I had was in the fact checking portion with classifications. It seems that every school is listed as 4A, regardless of year. That should be the only thing that needs to be fixed.
